service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: rpmusanze
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
  type: ClusterIP
